[gd_scene load_steps=4 format=2]

[ext_resource path="res://data/Droid Sans Mono Nerd Font Complete Windows Compatible.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/endMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[node name="endMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.270588 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control"]
margin_top = 160.0
margin_right = 1024.0
margin_bottom = 439.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer2"]
margin_left = 270.0
margin_right = 754.0
margin_bottom = 279.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Control/HBoxContainer2/VBoxContainer"]
margin_right = 484.0
margin_bottom = 49.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]hyottocco[/center]"
text = "hyottocco"
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer2/VBoxContainer"]
margin_top = 53.0
margin_right = 484.0
margin_bottom = 279.0

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 226.0
custom_constants/margin_right = 80
custom_constants/margin_top = 80
custom_constants/margin_left = 80
custom_constants/margin_bottom = 80

[node name="GridContainer" type="GridContainer" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 80.0
margin_top = 80.0
margin_right = 176.0
margin_bottom = 146.0
columns = 2

[node name="scoreLabel" type="Label" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer/GridContainer"]
margin_right = 71.0
margin_bottom = 14.0
text = "Score:"

[node name="scoreValue" type="Label" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer/GridContainer"]
margin_left = 75.0
margin_right = 96.0
margin_bottom = 14.0
text = "0"

[node name="timeLabel" type="Label" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer/GridContainer"]
margin_top = 18.0
margin_right = 71.0
margin_bottom = 32.0
text = "Time:"

[node name="timeValue" type="Label" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer/GridContainer"]
margin_left = 75.0
margin_top = 18.0
margin_right = 96.0
margin_bottom = 32.0
text = "0"

[node name="targetsHitLabel" type="Label" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer/GridContainer"]
margin_top = 36.0
margin_right = 71.0
margin_bottom = 50.0
text = "Targets hit:"

[node name="targetsHitValue" type="Label" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer/GridContainer"]
margin_left = 75.0
margin_top = 36.0
margin_right = 96.0
margin_bottom = 50.0
text = "0/0"

[node name="MarginContainer2" type="MarginContainer" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 260.0
margin_right = 484.0
margin_bottom = 226.0
custom_constants/margin_right = 80
custom_constants/margin_top = 80
custom_constants/margin_left = 80
custom_constants/margin_bottom = 80

[node name="GridContainer2" type="GridContainer" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer2"]
margin_left = 80.0
margin_top = 80.0
margin_right = 144.0
margin_bottom = 146.0

[node name="highscoreLabel" type="Label" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer2/GridContainer2"]
margin_right = 64.0
margin_bottom = 14.0
text = "Highscore"

[node name="highscoreValue" type="Label" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer2/GridContainer2"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 66.0
text = "-
-
-"
